--- a/components/layout/Layout.module.css
+++ b/components/layout/Layout.module.css
@@ -1,3 +1,9 @@
+.layout{
+  width: 100%;
+  height: fit-content;
+  align-items: center;
+  justify-content: space-between;
+}
 .main {
   margin: 3rem auto;
   width: 90%;
